--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.0",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.9.16",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
